--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Property</h1>
+<div id="new_property">
+  <h1>New Property</h1>
 
-<%= render 'form', property: @property %>
+  <%= render 'form', property: @property %>
 
-<%= link_to 'Back', properties_path %>
+  <%= link_to 'Cancel', properties_path %>
+</div>
